third_party/WebKit/Source/core/css/SelectorChecker.cpp
@@ -559,8 +559,17 @@ static bool anyAttributeMatches(Element& element,
 
   AttributeCollection attributes = element.attributesWithoutUpdate();
   for (const auto& attributeItem : attributes) {
-    if (!attributeItem.matches(selectorAttr))
-      continue;
+    if (!attributeItem.matches(selectorAttr)) {
+      if (element.isHTMLElement() || !element.document().isHTMLDocument())
+        continue;
+      // Non-html attributes in html documents are normalized to their camel-
+      // cased version during parsing if applicable. Yet, attribute selectors
+      // are lower-cased for selectors in html documents. Compare the selector
+      // and the attribute local name insensitively to e.g. allow matching SVG
+      // attributes like viewBox.
+      if (!attributeItem.matchesCaseInsensitive(selectorAttr))
+        continue;
+    }
 
     if (attributeValueMatches(attributeItem, match, selectorValue,
                               caseSensitivity))
